k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-ingress

spec:
  rules:
  - host: employee.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: employee-management-service

            port:
              number: 5000
